Config page update, fixes

--- a/css/style.css
+++ b/css/style.css
@@ -922,6 +922,7 @@ g - green	#009900		n - navy		#000099		u - gold	#ffcc00
 .x-yh	{ color: #fff00c; background-color: #00aaff;}
 .x-yk	{ color: #fff00c; background-color: #000000;}
 .x-yn	{ color: #fff00c; background-color: #000099;}
+.x-yo	{ color: #fff00c; background-color: #ff9900;}
 .x-yp	{ color: #fff00c; background-color: #660099;}
 .x-yr	{ color: #fff00c; background-color: #ff0000;}
 .x-zg	{ color: #00ff00; background-color: #009900;}
