--- a/css/style.css
+++ b/css/style.css
@@ -916,6 +916,7 @@ g - green	#009900		n - navy		#000099		u - gold	#ffcc00
 .x-wv	{ color: #ffffff; background-color: #aa5533;}
 .x-wz	{ color: #ffffff; background-color: #00ff00;}
 .x-xs	{ color: #660033; background-color: #aaaaaa; box-sizing: border-box; border: 1px solid #660033;}
+.x-ya	{ color: #fff00c; background-color: #3366ff;}
 .x-yb	{ color: #fff00c; background-color: #0000ff;}
 .x-yf	{ color: #fff00c; background-color: #77aadd;}
 .x-yg	{ color: #fff00c; background-color: #009900;}
