--- a/css/style.css
+++ b/css/style.css
@@ -13,32 +13,32 @@ g - green	#009900		n - navy		#000099		u - gold	#ffcc00
 .slate	{ color: #000000; background-color: #eeeeee; text-shadow: 0px 0px;}
 .grass	{ color: #000000; background-color: #eeeeee; background-image: url('../image/grass.png');}
 
-.gz-a	{ background-color: rgba( 51,102,255,0.6); }
-.gz-b	{ background-color: rgba(  0,  0,255,0.6); }
-.gz-c	{ background-color: rgba(153,  0, 68,0.6); }
-.gz-d	{ background-color: rgba(204,  0,  0,0.6); }
-.gz-e	{ background-color: rgba(  0,204,  0,0.6); }
-.gz-f	{ background-color: rgba(119,170,221,0.6); }
-.gz-g	{ background-color: rgba(  0,153,  0,0.6); }
-.gz-h	{ background-color: rgba(  0,170,255,0.6); }
-.gz-i	{ background-color: rgba(255,159,159,0.6); }
-.gz-j	{ background-color: rgba(170, 51, 88,0.6); }
-.gz-k	{ background-color: rgba(  0,  0,  0,0.6); }
-.gz-l	{ background-color: rgba(136,102,238,0.6); }
-.gz-m	{ background-color: rgba(255,  0,255,0.6); }
-.gz-n	{ background-color: rgba(  0,  0,255,0.6); }
-.gz-o	{ background-color: rgba(255,153,  0,0.6); }
-.gz-p	{ background-color: rgba(102,  0,153,0.6); }
-.gz-q	{ background-color: rgba(136,  0,  0,0.6); }
-.gz-r	{ background-color: rgba(255,  0,  0,0.6); }
-.gz-s	{ background-color: rgba(170,170,170,0.6); }
-.gz-t	{ background-color: rgba(217,171, 75,0.6); }
-.gz-u	{ background-color: rgba(255,204,  0,0.6); }
-.gz-v	{ background-color: rgba(102, 34,  0,0.6); }
-.gz-w	{ background-color: rgba(255,255,255,0.6); }
-.gz-x	{ background-color: rgba(102,  0, 51,0.6); }
-.gz-y	{ background-color: rgba(255,240, 12,0.6); }
-.gz-z	{ background-color: rgba(  0,255,  0,0.6); }
+.gz-a	{ background-color: rgba( 51,102,255,0.5); }
+.gz-b	{ background-color: rgba(  0,  0,255,0.5); }
+.gz-c	{ background-color: rgba(153,  0, 68,0.5); }
+.gz-d	{ background-color: rgba(204,  0,  0,0.5); }
+.gz-e	{ background-color: rgba(  0,204,  0,0.5); }
+.gz-f	{ background-color: rgba(119,170,221,0.5); }
+.gz-g	{ background-color: rgba(  0,153,  0,0.5); }
+.gz-h	{ background-color: rgba(  0,170,255,0.5); }
+.gz-i	{ background-color: rgba(255,159,159,0.5); }
+.gz-j	{ background-color: rgba(170, 51, 88,0.5); }
+.gz-k	{ background-color: rgba(  0,  0,  0,0.5); }
+.gz-l	{ background-color: rgba(136,102,238,0.5); }
+.gz-m	{ background-color: rgba(255,  0,255,0.5); }
+.gz-n	{ background-color: rgba(  0,  0,255,0.5); }
+.gz-o	{ background-color: rgba(255,153,  0,0.5); }
+.gz-p	{ background-color: rgba(102,  0,153,0.5); }
+.gz-q	{ background-color: rgba(136,  0,  0,0.5); }
+.gz-r	{ background-color: rgba(255,  0,  0,0.5); }
+.gz-s	{ background-color: rgba(170,170,170,0.5); }
+.gz-t	{ background-color: rgba(217,171, 75,0.5); }
+.gz-u	{ background-color: rgba(255,204,  0,0.5); }
+.gz-v	{ background-color: rgba(102, 34,  0,0.5); }
+.gz-w	{ background-color: rgba(255,255,255,0.5); }
+.gz-x	{ background-color: rgba(102,  0, 51,0.5); }
+.gz-y	{ background-color: rgba(255,240, 12,0.5); }
+.gz-z	{ background-color: rgba(  0,255,  0,0.5); }
 
 .a	{ border-color: #3366ff; border-width: 1px; border-style: solid; margin: 1px;}
 .b	{ border-color: #0000ff; border-width: 1px; border-style: solid; margin: 1px;}
@@ -133,7 +133,7 @@ g - green	#009900		n - navy		#000099		u - gold	#ffcc00
 .in	{ color: #ff9f9f; background-color: #000099;}
 .iw { color: #ff9f9f; background-color: #ffffff;}
 .ka	{ color: #000000; background-color: #3366ff;}
-.kb	{ color: #000000; background-color: #0000ff; text-shadow: -1px -1px 0 #3366ff,1px -1px 0 #3366ff,-1px 1px 0 #3366ff,1px 1px 0 #3366ff;}
+.kb	{ color: #ffffff; background-color: #0000ff; text-shadow: -1px -1px 0 #000000,1px -1px 0 #000000,-1px 1px 0 #000000,1px 1px 0 #000000;}
 .kc	{ color: #000000; background-color: #990044;}
 .kd	{ color: #000000; background-color: #cc0000;}
 .ke	{ color: #000000; background-color: #00cc00;}
