--- a/css/base.css
+++ b/css/base.css
@@ -6,7 +6,7 @@ body {
 }
 h1 {	margin-bottom: 10px; text-align: center; }
 h2 {	margin-bottom: 6px; text-align: center; }
-code { background-color: black; color: white; }
+code {  background-color: black; color: white; }
 .rounded-tl {    border-top-left-radius: 1rem; }
 .rounded-tr {    border-top-right-radius: 1rem; }
 .rounded-bl {    border-bottom-left-radius: 1rem; }
@@ -15,6 +15,21 @@ code { background-color: black; color: white; }
 .gauze {
 	background-color: rgba(238,238,238,0.6);
 }
+
+.badge-pill {
+    color: inherit; text-decoration: inherit;
+    text-shadow: none;
+}
+.badge-danger,
+.badge-success {
+    text-shadow: none;
+    border: 1px #ffffff solid;
+}
+.badge-warning {
+    text-shadow: none;
+    border: 1px #212529 solid;
+}
+
 
 .nationFrame > p > a {
     color: inherit; text-decoration: inherit;
