--- a/css/badge.css
+++ b/css/badge.css
@@ -924,7 +924,7 @@
 	background-color: #ffffff;
 	background-size: 100% 100%;
 	color: #000000;
-	text-shadow: -1px -1px #000000;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
 }
 .x135 {
 	background-image: url('../image/logos/zurich.png');
