new badges for UEL

--- a/css/badge.css
+++ b/css/badge.css
@@ -2214,3 +2214,38 @@
 	color: #0000ff;
 	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
 }
+.x319 {
+	background-image: url('../image/logos/royalantwerp.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #ff0000;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
+}
+.x320 {
+	background-image: url('../image/logos/cskasofia.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #ff0000;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
+}
+.x321 {
+	background-image: url('../image/logos/granada.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #ff0000;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
+}
+.x322 {
+	background-image: url('../image/logos/omonianicosia.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #009900;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
+}
+.x323 {
+	background-image: url('../image/logos/sivasspor.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #ff0000;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
+}
