--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ g - green	#009900		n - navy		#000099		u - gold	#ffcc00
 .gb	{ color: #009900; background-color: #0000ff;}
 .gd	{ color: #009900; background-color: #cc0000;}
 .ge	{ color: #009900; background-color: #00cc00;}
+.gi	{ color: #009900; background-color: #ff9f9f;}
 .gk	{ color: #009900; background-color: #000000;}
 .gm	{ color: #009900; background-color: #ff00ff;}
 .gn	{ color: #009900; background-color: #000099;}
@@ -185,6 +186,7 @@ g - green	#009900		n - navy		#000099		u - gold	#ffcc00
 .po	{ color: #660099; background-color: #ff9900;}
 .pr	{ color: #660099; background-color: #ff0000;}
 .pw	{ color: #660099; background-color: #ffffff;}
+.py	{ color: #660099; background-color: #fff00c;}
 .qu	{ color: #880000; background-color: #ffcc00;}
 .qw	{ color: #880000; background-color: #ffffff;}
 .ra	{ color: #ff0000; background-color: #3366ff;}
@@ -654,6 +656,7 @@ g - green	#009900		n - navy		#000099		u - gold	#ffcc00
 .s-ddu	{ color: #cc0000; background: repeating-linear-gradient(to right, #cc0000, #cc0000 14%, #ffcc00 14%, #ffcc00 29%, #cc0000 29%, #cc0000 43%, #ffcc00 43%, #ffcc00 57%, #cc0000 57%, #cc0000 71%, #ffcc00 71%, #ffcc00 86%, #cc0000 86%, #cc0000 ); text-shadow: -1px -1px 0 #ffcc00,1px -1px 0 #ffcc00,-1px 1px 0 #ffcc00,1px 1px 0 #ffcc00;}
 .s-ddw	{ color: #cc0000; background: repeating-linear-gradient(to right, #cc0000, #cc0000 14%, #ffffff 14%, #ffffff 29%, #cc0000 29%, #cc0000 43%, #ffffff 43%, #ffffff 57%, #cc0000 57%, #cc0000 71%, #ffffff 71%, #ffffff 86%, #cc0000 86%, #cc0000 ); text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;}
 .s-ffw	{ color: #77aadd; background: repeating-linear-gradient(to right, #77aadd, #77aadd 14%, #ffffff 14%, #ffffff 29%, #77aadd 29%, #77aadd 43%, #ffffff 43%, #ffffff 57%, #77aadd 57%, #77aadd 71%, #ffffff 71%, #ffffff 86%, #77aadd 86%, #77aadd ); text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;}
+.s-ggi	{ color: #009900; backgorund: repeating-linear-gradient(to right, #009900, #009900 14%, #ff9f9f 14%, #ff9f9f 29%, #009900 29%, #009900 43%, #ff9f9f 43%, #ff9f9f 57%, #009900 57%, #009900 71%, #ff9f9f 71%, #ff9f9f 86%, #009900 86%, #009900 ); text-shadow: -1px -1px 0 #ff9f9f,1px -1px 0 #ff9f9f,-1px 1px 0 #ff9f9f,1px 1px 0 #ff9f9f;}
 .s-ggk	{ color: #009900; background: repeating-linear-gradient(to right, #009900, #009900 14%, #000000 14%, #000000 29%, #009900 29%, #009900 43%, #000000 43%, #000000 57%, #009900 57%, #009900 71%, #000000 71%, #000000 86%, #009900 86%, #009900 ); text-shadow: -1px -1px 0 #000000,1px -1px 0 #000000,-1px 1px 0 #000000,1px 1px 0 #000000;}
 .s-ggo	{ color: #009900; background: repeating-linear-gradient(to right, #009900, #009900 14%, #ff9900 14%, #ff9900 29%, #009900 29%, #009900 43%, #ff9900 43%, #ff9900 57%, #009900 57%, #009900 71%, #ff9900 71%, #ff9900 86%, #009900 86%, #009900 ); text-shadow: -1px -1px 0 #ff9900,1px -1px 0 #ff9900,-1px 1px 0 #ff9900,1px 1px 0 #ff9900;}
 .s-ggw	{ color: #009900; background: repeating-linear-gradient(to right, #009900, #009900 14%, #ffffff 14%, #ffffff 29%, #009900 29%, #009900 43%, #ffffff 43%, #ffffff 57%, #009900 57%, #009900 71%, #ffffff 71%, #ffffff 86%, #009900 86%, #009900 ); text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;}
