fix to backend for map co-ords. rewrite needed

--- a/css/base.css
+++ b/css/base.css
@@ -63,7 +63,7 @@ code {  background-color: black; color: white; }
     text-shadow: none;
 	margin-bottom: 10px;
 }
-.ldrHd {
+th {
 	background-color: #888888;
     text-align: right;
     font-weight: bold;
